# remote-ci

./: .gitignore  AGENTS.md  BUILD-PUSH-README.md  CLAUDE.md  Makefile  Makefile-readme-en.md  Makefile-readme.md  README-backup.md  README-zh.md  README.md
.code-quality/: python.md
.github/workflows/: build-push-simple.yml  build-push.yml  ci.yml  codeql-security-analysis.yml  release.yml
backend-go/: .env.example  Dockerfile  go.mod  main.go
backend-go/internal/common/: errors.go  models.go
backend-go/internal/dao/: user_dao.go
backend-go/internal/handler/: user_handler.go  user_handler_test.go
backend-go/internal/service/: user_service.go
backend-go/migrations/: 0001_create_users.sql
backend-java/: .dockerignore  pmd-ruleset.xml  pom.xml
backend-java/config/: pmd-ruleset.xml  spotbugs-exclude.xml
backend-java/src/main/java/com/example/: HelloWorld.java
backend-java/user-common/src/main/java/com/example/common/dto/: CreateUserRequest.java  UpdateUserRequest.java  UserResponse.java
backend-java/user-web/src/main/java/com/example/web/controller/: UserController.java
backend-java/user-web/src/main/resources/: application.yml
backend-java/user-web/src/main/resources/db/migration/: V1__Create_users_table.sql  V2__Insert_sample_users.sql
backend-python/: .dockerignore  README.md  main.py  pyproject.toml  requirements.txt
backend-python/app/: main.py
backend-python/app/api/v1/: users.py
backend-python/app/core/: config.py  models.py  schemas.py  security.py
backend-python/app/core/services/: user_service.py
backend-python/app/db/: database.py
backend-python/app/db/dao/: user_dao.py
backend-python/tests/: conftest.py
backend-python/tests/integration/: test_users_api.py
backend-python/tests/unit/: test_user_service.py
demo-apps/backends/go/: .dockerignore  README.md  go.sum
demo-apps/backends/go/cmd/server/: main.go
demo-apps/backends/go/internal/common/: models.go
demo-apps/backends/go/internal/dao/: user_dao.go
demo-apps/backends/go/internal/handler/: user_handler.go
demo-apps/backends/go/internal/service/: user_service_test.go
demo-apps/backends/java/: Dockerfile  README.md
demo-apps/backends/java/user-common/: pom.xml
demo-apps/backends/java/user-common/src/main/java/com/example/common/constants/: ErrorCodes.java
demo-apps/backends/java/user-common/src/main/java/com/example/common/dto/: ApiResponse.java  CreateUserRequest.java  UpdateUserRequest.java
demo-apps/backends/java/user-common/src/main/java/com/example/common/entity/: User.java
demo-apps/backends/java/user-dao/: pom.xml
demo-apps/backends/java/user-dao/src/main/java/com/example/dao/: UserMapper.java
demo-apps/backends/java/user-service/: pom.xml
demo-apps/backends/java/user-service/src/main/java/com/example/service/: UserService.java
demo-apps/backends/java/user-service/src/main/java/com/example/service/impl/: UserServiceImpl.java
demo-apps/backends/java/user-web/: pom.xml
demo-apps/backends/java/user-web/src/main/java/com/example/: UserManagementApplication.java
demo-apps/backends/python/: .coverage  .env.example  .flake8  Dockerfile  main.py  setup.cfg
demo-apps/backends/python/app/core/: schemas.py  security.py
demo-apps/backends/python/app/db/: database.py
demo-apps/backends/python/app/db/dao/: user_dao.py
demo-apps/backends/python/app/db/migrations/: 0001_create_users.sql
demo-apps/backends/python/tests/: conftest.py
demo-apps/backends/python/tests/unit/: test_user_service.py
demo-apps/frontends/ts/: .dockerignore  .prettierignore  eslint.config.js  index.html  index.ts  package.json  tsconfig.ci.json
demo-apps/frontends/ts/src/: main.ts
demo-apps/frontends/ts/src/__tests__/: helpers.test.ts  setup.ts
demo-apps/frontends/ts/src/utils/: helpers.ts
docker/: DOCKER.md  README.md  docker-compose.yml  docker-dev.sh
frontend-ts/: Dockerfile  README.md  eslint.config.js  index.ts  jest.config.ts  nginx.conf  package-lock.json  package.json  tsconfig.ci.json  tsconfig.json
frontend-ts/src/: main.ts
frontend-ts/src/__tests__/: helpers.test.ts  main.test.ts  setup.ts
frontend-ts/src/styles/: main.css
frontend-ts/src/utils/: helpers.ts
makefile-tests/: README.md  quick_test.sh  test_makefile.sh
makefiles/: check-comments.sh  comment-check.mk  common.mk  git.mk  go.mk  java.mk  localci.toml  python.mk  typescript.mk
makefiles/core/: detection.mk  workflows.mk
makefiles/legacy/: enabled
scripts/: init.sql  parse_localci.sh
