# Python project configuration
[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backend-python"
version = "0.1.0"
description = "Python backend service"
readme = "README.md"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.9"

# =============================================================================
# Code Quality Tools Configuration
# =============================================================================

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

# 忽略测试文件的类型检查
[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# 忽略SQLAlchemy相关的类型检查
[[tool.mypy.overrides]]
module = "app.db.dao.*"
ignore_errors = true

# 忽略service层中数据库操作的类型检查
[[tool.mypy.overrides]]  
module = "app.core.services.*"
disable_error_code = ["assignment", "arg-type"]

# 忽略config.py的pydantic settings类型检查
[[tool.mypy.overrides]]
module = "app.core.config"
ignore_errors = true

[tool.pylint.messages_control]
max-line-length = 88
good-names = ["i", "j", "k", "ex", "id", "_", "db", "pk", "ui", "app"]
disable = [
    "C0103",  # invalid-name
    "R0903",  # too-few-public-methods
    "C0111",  # missing-docstring
    "C0114",  # missing-module-docstring
    "E0401",  # import-error (ignore missing imports for third-party)
    "E1101",  # no-member
    "R0801",  # duplicate-code
    "C0115",  # missing-class-docstring
    "R0913",  # too-many-arguments
    "W0613",  # unused-argument
    "R0914",  # too-many-locals
    "W0212",  # protected-access
]

[tool.pylint.format]
max-line-length = 88

[tool.pylint.design]
max-args = 7
max-locals = 15
max-returns = 6
max-branches = 12
max-statements = 50

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:passlib.utils",
    "ignore:.*'crypt'.*deprecated.*:DeprecationWarning",
]
asyncio_mode = "strict"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]